2023-11-04T16:19:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6755923020 # 1317
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 5 18
* notice: prev accum: outdated-unq outdated-all / unq all: 278 947 / 285 994
* notice: next accum: outdated-unq outdated-all / unq all: 280 976 / 285 994
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-21] / []

2023-11-04T01:11:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6751807323 # 1315
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 7 47
* notice: prev accum: outdated-unq outdated-all / unq all: 275 937 / 285 994
* notice: next accum: outdated-unq outdated-all / unq all: 278 947 / 285 994
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-20] / []

2023-11-03T16:21:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6747747740 # 1314
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 8 49
* notice: prev accum: outdated-unq outdated-all / unq all: 275 937 / 284 992
* notice: next accum: outdated-unq outdated-all / unq all: 275 937 / 285 994
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -2 -8 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-20 2023-11-03]

2023-10-31T16:22:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6709463475 # 1305