@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-04T16:19:38Z",
+  "timestamp" : "2023-11-05T01:17:40Z",
   "count_outdated" : 976,
   "uniques_outdated" : 280,
-  "count" : 994,
-  "uniques" : 285,
+  "count" : 1005,
+  "uniques" : 286,
   "views" : [
     {
       "timestamp": "2023-10-24T00:00:00Z",
@@ -37,6 +37,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-05T00:00:00Z",
+      "count": 11,
+      "count_minmax": [ 11, 11 ],
+      "count_decinc": [ 0, 11 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
