@@ -1,5 +1,5 @@
 {
-  "count": 18,
+  "count": 29,
   "uniques": 5,
   "views": [
     {
@@ -20,6 +20,11 @@
     {
       "timestamp": "2023-11-03T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-05T00:00:00Z",
+      "count": 11,
       "uniques": 1
     }
   ]
